# cat-classifier

./: .gitignore  README.md  pyproject.toml
cat_classifier/datasets/: images_to_vector.py
cat_classifier/models/: logistic_regression.py  shallow_nn.py
learning/pillow/images/: credits.txt
learning/pillow/load_image/: script.py
learning/pillow/resize/: script.py
learning/pillow/to_array/: script.py
notebooks/: Logistic Regression .ipynb
notebooks/.ipynb_checkpoints/: Logistic Regression -checkpoint.ipynb
project/datasets/: images_to_vector.py
project/models/: logistic_regresssion.py
test/models/: test_logistic_regression.py
